--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- Bootstrap -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <!-- Styles -->
-        <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="css/main.css">
         <!-- Google font -->
         <link href='https://fonts.googleapis.com/css?family=Hind+Siliguri:400,600' rel='stylesheet' type='text/css'>
         <!-- Font Awesome -->
@@ -43,7 +43,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="pic-wrap">
-                            <img src="/img/mamon.png" class="img-responsive" alt="Mamos's Picture">
+                            <img src="img/mamon.png" class="img-responsive" alt="Mamos's Picture">
                         </div>
                     </div>
                     <div class="col-md-8">
@@ -69,6 +69,6 @@
         </section>
 
 
-        <script src="/js/main.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
