adding icons and style for solutionbox

--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <!-- Styles -->
         <link rel="stylesheet" href="css/main.css">
-        <!-- Google font -->
-        <link href='https://fonts.googleapis.com/css?family=Hind+Siliguri:400,600' rel='stylesheet' type='text/css'>
-        <!-- Font Awesome -->
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
 
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -47,10 +44,9 @@
                         </div>
                     </div>
                     <div class="col-md-8">
-                        <p><strong>Name:</strong> Mamón</p>
-                        <p><strong>What he loves most in the world:</strong> biting printer cables.</p>
-                        <p><strong>What he hates most in the world:</strong> love hugs when he wants just biting printer cables.</p>
-                        <p><strong>Favourite Movie:</strong> <a target="_blank" href="http://www.imdb.com/title/tt0103786/">Beethoven</a></p>
+                        <p><span class=" glyphicon glyphicon-heart" aria-hidden="true"></span>  <strong>What he loves most in the world:</strong> biting printer cables.</p>
+                        <p><span class=" glyphicon glyphicon-fire" aria-hidden="true"></span>  <strong>What he hates most in the world:</strong> love hugs when he wants just biting printer cables.</p>
+                        <p><span class=" glyphicon glyphicon-facetime-video" aria-hidden="true"></span>  <strong>Favourite Movie:</strong> <a target="_blank" href="http://www.imdb.com/title/tt0103786/">Beethoven</a></p>
                         <p>He likes make new friends (As <a target="_blank" href="https://twitter.com/JorgeAgundez">Jorgito</a>, who could be an amazing new one for the office). Although Mamón has a very peculiar name, He really likes his name's meaning in Spanish. He enjoys playing the guessing game. Do you know what is his favorite food?<p>
                         <p><a href="#" class="btn btn-lg guess">Get a Guess!</a></p>
                     </div>
@@ -61,7 +57,7 @@
         <section>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 col-md-offset-3 solution-wrap ">
+                    <div class="col-md-8 col-md-offset-4 solution-wrap ">
                         <p class="solution"></p>
                     </div>
                 </div>
